@@ -1,5 +1,6 @@
 +++ version 4.0-alpha2:
- *chat: #3081 fixed: properly load conferences from configuration (Vogel)
+* chat: #3081 fixed: properly load conferences from configuration (Vogel)
+* jabber: #3082 fixed: do not crash when accepting SSL certificate after some time (Vogel)
 
 +++ version 4.0-alpha1:
 * amarok1_mediaplayer: plugin removed (Vogel)
